--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,10 @@
+.input {
+    width: 60%;
+    height: 20vh;
+}
+
 .keyboard {
-    width: 100%;
+    width: 60%;
 }
 
 .row {
@@ -13,7 +18,11 @@
     color: #fff;
     line-height: 30px;
     text-align: center;
-    margin: 0 3px;
+    margin: 3px;
     cursor: pointer;
     -webkit-user-select: none;
+}
+
+.active {
+    background: orchid;
 }
